# ChatServerWithAI

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/ai/: ai.hpp
include/server/db/: db.h
include/server/model/: friendmodel.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/ai/: ai.cpp
src/server/db/: db.cpp
src/server/model/: friendmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
test/: text.json
test/testjson/: ai  ai.cpp  ai_nostream.cpp  testapi  testapi.cpp  testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  Makefile  cmake_install.cmake
